[package]
name = "parco-multipart"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "Parco Multipart"
keywords = ["parco", "multipart"]
homepage = "https://github.com/williamcparks/parco-multipart"
repository = "https://github.com/williamcparks/parco-multipart"
readme = "README.md"

[dependencies]
mime = "0.3.17"
thiserror = "2.0.17"
